<resources>
  <string name="app_name">Twitter Ben</string>
  <string name="startText">See what\'s happen- ing in the world right now.</string>
  <string name="get_started_button">Get started</string>
  <string name="phone_number_or_email">Email address</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="choose_who_to_follow">Suggestions for you to follow</string>
  <string name="when_you_follow_someone_you_ll_see_their_tweets_in_your_home_timeline">When you follow someone, you\'ll see their\nTweets in your Home Timeline</string>
  <string name="profile">Profile</string>
  <string name="lists">Lists</string>
  <string name="bookmarks">Bookmarks</string>
  <string name="moments">Moments</string>
  <string name="logout">LogOut</string>
</resources>
