<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>
    <item
        android:id="@+id/nav_lists"
        android:icon="@drawable/ic_lists"
        android:title="@string/lists"/>
    <item
        android:id="@+id/nav_bookmarks"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/bookmarks"/>
    <item
        android:id="@+id/nav_moments"
        android:icon="@drawable/ic_lightning"
        android:title="@string/moments"/>
  </group>

  <item android:title="">
    <menu>
      <item
          android:id="@+id/nav_send"
          android:icon="@drawable/ic_logout"
          android:title="@string/logout"/>
    </menu>
  </item>

</menu>
